# WesMes

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  compose.yml  config.sh  develop.sh  launch.py  logger.conf  package-lock.json  package.json  pyproject.toml  redis.conf  requirements.txt  tailwind.config.js
service/: __init__.py  classes.py  routes.py  utils.py
service/common/: log_handlers.py  redis_data.py
service/static/: navbar.js  output.css
service/templates/: 404.html  500.html  chat.html  home.html  index.html  login.html  new_chat.html  signup.html
service/templates/layouts/: home_nav.html  index_nav.html
