[tool.poetry]
name = "wesmes"
version = "0.1.0"
description = "A chatting thing"
authors = ["Weston Gorczyca <weston.gorczyca@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-socketio = "^5.4.1"
waitress = "^3.0.0"
flask-login = "^0.6.3"
flask-redis = "^0.4.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
